// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConventionModal /> should render 1`] = `
.c3 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):active,
.c3:not([disabled]):focus {
  color: #18181c;
  background: #fbfcfd;
}

.c3[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 1.25rem 1.5rem;
  color: #005994;
  font-weight: bold;
  font-size: 1.125rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:hover {
  border-color: #005994;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

.c1 {
  display: block;
  max-width: 100%;
  padding-right: 0;
  overflow-y: auto;
}

.c2 {
  margin-top: 1.25rem;
}

<div>
  <button
    class="c0"
    href=""
  >
    <div
      class="c1"
    >
      Votre convention collective
    </div>
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        Rechercher
      </div>
    </div>
  </button>
</div>
`;

exports[`<ConventionModal /> should render a popup when click on button 1`] = `
.c6 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c6 > *:first-child {
  margin-top: 0;
}

.c6 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  color: #0c0c0e;
  background: #ebeff3;
  border-color: #ebeff3;
}

.c3:not([disabled]):hover,
.c3:not([disabled]):active,
.c3:not([disabled]):focus {
  color: #18181c;
  background: #fbfcfd;
}

.c3[disabled] {
  color: rgba(12,12,14,0.4);
  cursor: not-allowed;
}

.c8 {
  display: inline-block;
  padding: 0.625rem 1.5rem;
  font-weight: 600;
  font-size: 1rem;
  line-height: inherit;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 1.5rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  background-color: transparent;
  border: none;
}

.c8:hover {
  color: #8c94a6;
}

.c10:not(:focus):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
}

.c4 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: auto;
  background: rgba(0,0,0,0.5);
}

.c5 {
  position: relative;
  width: 50vw;
  max-height: calc(100vh - 2 * 10vh);
  margin: 10vh auto;
  padding: 2rem;
  overflow-y: auto;
  color: #434956;
  background: #fff;
  border-radius: 0.25rem;
  outline: none;
}

.c9 {
  position: absolute;
  top: 0;
  right: 0;
}

.c0 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  box-sizing: border-box;
  margin: 0;
  padding: 1.25rem 1.5rem;
  color: #005994;
  font-weight: bold;
  font-size: 1.125rem;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: 1px solid #c9d3df;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: 250ms all;
  transition: 250ms all;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:hover {
  border-color: #005994;
  box-shadow: 0 5px 10px 0 #ebeff3;
}

.c1 {
  display: block;
  max-width: 100%;
  padding-right: 0;
  overflow-y: auto;
}

.c2 {
  margin-top: 1.25rem;
}

.c7 {
  width: 100%;
}

@media print {
  .c6 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:1200px) {
  .c5 {
    width: 60vw;
  }
}

@media (max-width:980px) {
  .c5 {
    width: 80vw;
  }
}

@media (max-width:600px) {
  .c5 {
    width: calc(100% - 2 * 1rem);
    max-height: calc(100vh - 2 * 1rem);
    margin: 1rem;
  }
}

@media (max-width:600px) {
  .c9 {
    position: fixed;
    top: 0.625rem;
    right: 0.625rem;
  }
}

<body>
  <div
    aria-hidden="true"
  >
    <button
      class="c0"
      href=""
    >
      <div
        class="c1"
      >
        Votre convention collective
      </div>
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          Rechercher
        </div>
      </div>
    </button>
  </div>
  <reach-portal>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div>
        <div
          class="c4"
          data-reach-dialog-overlay="true"
        >
          <div
            aria-label="Rechercher votre convention collective"
            aria-modal="true"
            class="c5"
            data-reach-dialog-content="true"
            role="dialog"
            tabindex="-1"
          >
            <div
              class="c6"
            >
              <h3>
                Recherche de convention collective
              </h3>
              <p>
                Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
              </p>
              <input
                class="c7"
                placeholder="Nom d'entreprise, SIRET, nom de convention collective"
                role="search"
                type="search"
                value=""
              />
              
            </div>
            <button
              class="c8 c9"
              title="fermer la modale"
            >
              <div
                class="c10"
              >
                fermer la modale
              </div>
              <svg
                aria-hidden="true"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <line
                  x1="18"
                  x2="6"
                  y1="6"
                  y2="18"
                />
                <line
                  x1="6"
                  x2="18"
                  y1="6"
                  y2="18"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </reach-portal>
</body>
`;
